# mono-bind

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mono-bind.sln
cmake/Modules/: FindMono.cmake
example/HelloWorld/Hello/: Hello.cs  Hello.csproj
example/HelloWorld/Hello/Properties/: AssemblyInfo.cs
example/HelloWorld/HelloHost/: HelloHost.cpp  HelloHost.vcxproj  HelloHost.vcxproj.filters
example/HttpClient/ClientHost/: ClientHost.cpp  ClientHost.vcxproj  ClientHost.vcxproj.filters
example/HttpClient/ClientLib/: Client.cs  ClientLib.csproj
example/HttpClient/ClientLib/Properties/: AssemblyInfo.cs
example/HttpServer/ServerHost/: ServerHost.cpp  ServerHost.vcxproj  ServerHost.vcxproj.filters
example/HttpServer/ServerLib/: Server.cs  ServerLib.csproj  TestModule.cs  packages.config
example/HttpServer/ServerLib/Properties/: AssemblyInfo.cs
include/: array.hpp  array.ipp  assembly.hpp  assembly.ipp  class.hpp  class.ipp  domain.hpp  domain.ipp  image.hpp  image.ipp  method.hpp  method.ipp  mono-bind.hpp  object.hpp  object.ipp  string_wrapper.hpp  type.hpp
include/mono-bind/: assembly.hpp  class.hpp  domain.hpp  image.hpp  object.hpp  string.hpp  type.hpp
include/mono-bind/details/: array.ipp  domain.ipp  image.ipp  object.ipp  string.ipp  type.ipp
props/: mono-bind-cpp.props  mono-bind-csharp.props
test/Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters  dummy.cpp
test/TestLib/: GetterSetterTest.cs  InteropTest.cs  InvokeTest1.cs  InvokeTest2.cs  TestLib.csproj  TestStruct1.cs
test/TestLib/Properties/: AssemblyInfo.cs
